applications/helpdesk/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helpdesk
  labels:
    managed-by: argocd
    homelab/type: application
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
